--- a/Explore/Versioned_Project/Versioned_Folder/.Versioned Mapping - Rename renamed.DTEMPLATE.json
+++ b/Explore/Versioned_Project/Versioned_Folder/.Versioned Mapping - Rename renamed.DTEMPLATE.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "08NcKqYRZYDieP9vaGQCqw",
-    "name" : "Versioned Mapping - Rename",
+    "name" : "Versioned Mapping - Rename renamed",
     "type" : "DTEMPLATE",
     "metadata" : {
       "modelVersion" : {
