--- a/Explore/Versioned_Project/.Versioned_Project.Project.json
+++ b/Explore/Versioned_Project/.Versioned_Project.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "asQA0Bk8jmcbfxEWgRgyAL",
-    "name" : "Versioned_Project_Renamed",
+    "name" : "Versioned_Project",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
